# maria

./: Cargo.toml  README.md  app.vue  nuxt.config.js  package.json  tailwind.config.js
components/: Footer.vue  Highligh.vue  Landing.vue  Navbar.vue  Section.vue  SimpleSection.vue
examples/: hello.rs  path_params.rs
layouts/: default.vue
pages/: index.vue
src/: lib.rs  main.rs  main_.rs  parse_route.rs  prelude.rs  request.rs  response.rs  router.rs
src/prelude/: request.rs
src/prelude/types/: mod.rs
src/static/: 404.html
src/static/test/: a.txt
src/types/: content_type.rs  http_methods.rs  mod.rs  status_code.rs
src/views/: index.html  notfound.html
