[package]
name = "maria"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.28"
serde = {version = "1.0.159", features=["derive"] }
serde_json = "1.0.95"
tokio = {version = "1.29.1", features=["full"]}
