[package]
name = "maria"
version = "0.7.6"
edition = "2021"
license = "MIT"
description = "a simple expressjs like web framework builtin rust"
homepage = "https://xfxpositions.github.io/maria/"
documentation = "https://docs.rs/maria"
repository = "https://github.com/xfxpositions/maria"
readme = "README.md"
exclude = ["src/main.rs"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
serde = {version = "1.0.159", features=["derive"] }
serde_json = "1.0.95"
tokio = {version = "1.29.1", features=["full"]}
